# ExampleBotBase

./: pyproject.toml  requirements.txt
bot/: .env  bot_cfg.py  db_cfg.py  main.py  models.py  requests.py
