[tool.poetry]
name = "examplebotbase"
version = "0.1.0"
description = ""
authors = ["ilia_volodin <vollodin61@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
redis = "^5.0.1"
emoji = "^2.9.0"
psycopg2 = "^2.9.9"

apscheduler = "^3"
aioschedule = "^0"
apscheduler-di = "^0"
pytz = "^2023.3.post1"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"
psycopg = "^3.1.15"
sqlalchemy = "^2.0.23"
environs = "^10.0.0"
alembic = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
